2006-05-09  Adam Jackson  <ajax@freedesktop.org>

	* render/render.c:
	Bug #6867: Yet another Render crash fix. (Michel Dänzer)

2006-05-09  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	* hw/xfree86/Makefile.am:
	* hw/xfree86/common/Makefile.am:
	* hw/xfree86/common/xf86Globals.c:
	* hw/xfree86/common/xf86Init.c:
	* hw/xfree86/os-support/linux/Makefile.am:
	* hw/xfree86/os-support/linux/lnx_acpi.c:
	* hw/xfree86/os-support/linux/lnx_apm.c:
	Bug #5209: Re-enable building APM and ACPI support. (Michel 
	Dänzer)

2006-05-03  Alan Coopersmith  <alan.coopersmith@sun.com>

        * configure.ac:
        * exa/Makefile.am:
        Fix Solaris build with Sun compilers to work when exa is built before
        hw/xfree86/os-support/solaris (as it is by default now).

2006-05-03  Alan Coopersmith  <alan.coopersmith@sun.com>

	* os/WaitFor.c:
        Use min() [defined in include/misc.h] instead of MIN() [not defined in
        any Xorg header].

2006-05-02  Adam Jackson  <ajax@freedesktop.org>

	* render/mitri.c:
	Bug #6642: Fix buffer overflow in Render.  (CVE 2006-1526, patch
	from Eric Anholt)

2006-04-28  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Bump to 1.0.99.902

2006-04-28  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86pciBus.c:
	* hw/xfree86/os-support/shared/stdResource.c:
	Bug #6750: Fixup for quirky Intel bridges. (Dave Airlie)

2006-04-28  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/os-support/bus/Pci.c:
	* hw/xfree86/os-support/bus/Pci.h:
	* hw/xfree86/os-support/bus/linuxPci.c:
	Bug #6751: Use sysfs to read card ROMs if available. (Dave 
	Airlie)

2006-04-24  Adam Jackson  <ajax@freedesktop.org>

	* fb/fbcompose.c:
	* render/picture.c:
	* render/picture.h:
	Bug #6325: Add support for x4a4 picture format.

	* hw/xfree86/os-support/linux/lnx_KbdMap.c:
	Bug #6472: Fix a static buffer overflow.  (David Woodhouse)

2006-04-18  Donnie Berkholz  <spyderous@gentoo.org>

	reviewed by: Alan Coopersmith
